--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -33,3 +33,71 @@ a,
     padding: 0 2rem;
   }
 }
+@media (min-width: 1024px) {
+
+
+  #app {
+    max-width: 1024px;
+    padding: 0 1rem;
+  }
+}
+
+@media (min-width: 1440px) {
+  #app {
+    max-width: 1440px;
+    padding: 0 3rem;
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+
+/* 
+@import './base.css';
+
+#app {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  font-weight: normal;
+  display: flex;
+  flex-direction: column;
+}
+
+a,
+.green {
+  text-decoration: none;
+  color: hsla(160, 100%, 37%, 1);
+  transition: 0.4s;
+  padding: 3px;
+}
+
+@media (hover: hover) {
+  a:hover {
+    background-color: hsla(160, 100%, 37%, 0.2);
+  }
+}
+
+@media (min-width: 768px) {
+  #app {
+    max-width: 768px;
+    padding: 0 2rem;
+  }
+}
+
+@media (min-width: 1024px) {
+
+
+  #app {
+    max-width: 1024px;
+    padding: 0 1rem;
+  }
+}
+
+@media (min-width: 1440px) {
+  #app {
+    max-width: 1440px;
+    padding: 0 3rem;
+  }
+}
+ */
